--- a/src/Profile Modal/ProfileModal.module.css
+++ b/src/Profile Modal/ProfileModal.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0); /* Fully transparent initially */
-  backdrop-filter: blur(0px); /* No blur initially */
+  backdrop-filter: blur(4px); /* No blur initially */
   display: none; /* Hidden by default */
   z-index: 1000;
 }
@@ -30,21 +30,21 @@
 
 @keyframes fadeIn {
   from { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px); }
-  to { background: rgba(0, 0, 0, 0.4); backdrop-filter: blur(4px); } /* Light mode, match Modal */
+  to { background: rgba(0, 0, 0, 0.4); backdrop-filter: blur(10px); } /* Light mode, match Modal */
 }
 
 @keyframes fadeInDark {
   from { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px); }
-  to { background: rgba(0, 0, 0, 0.6); backdrop-filter: blur(4px); } /* Dark mode, match Modal */
+  to { background: rgba(0, 0, 0, 0.6); backdrop-filter: blur(10px); } /* Dark mode, match Modal */
 }
 
 @keyframes fadeOut {
-  from { background: rgba(0, 0, 0, 0.4); backdrop-filter: blur(4px); }
+  from { background: rgba(0, 0, 0, 0.4); backdrop-filter: blur(10px); }
   to { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px); } /* Light mode */
 }
 
 @keyframes fadeOutDark {
-  from { background: rgba(0, 0, 0, 0.6); backdrop-filter: blur(4px); }
+  from { background: rgba(0, 0, 0, 0.6); backdrop-filter: blur(10px); }
   to { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px); } /* Dark mode */
 }
 
@@ -54,7 +54,7 @@
   left: 100%; /* Start off-screen to the right */
   width: 400px;
   height: 100%;
-  background: rgba(243, 242, 248, 0.7);
+  background: rgba(255, 255, 255, 0.7);
   backdrop-filter: blur(4px);
   box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
@@ -90,14 +90,14 @@
 }
 
 .settingsTitle {
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 26px;
+  font-weight: 800;
   color: #1d1d1f; /* Light mode text */
   transition: color 0.3s ease;
 }
 
 .settingsTitle.darkTheme {
-  color: #f5f5f7; /* Dark mode text */
+  color: #ffffff; /* Dark mode text */
 }
 
 .closeButton {
@@ -140,12 +140,12 @@
   font-size: 16px;
   font-weight: 600;
   margin-bottom: 10px;
-  color: #333;
+  color: #000000;
   transition: color 0.3s ease;
 }
 
 .section h3.darkTheme {
-  color: #f5f5f7;
+  color: #ffffff;
 }
 
 .actionButton {
@@ -156,8 +156,8 @@
   margin-bottom: 10px;
   font-size: 15px;
   font-weight: 500;
-  color: #6e6e73;
-  background: rgba(255, 255, 255); /* Light mode button */
+  color: #000000;
+  background: rgba(255, 255, 255, 0.35); /* Light mode button */
   border: none;
   border-radius: 10px;
   cursor: pointer;
@@ -166,8 +166,8 @@
 }
 
 .actionButton.darkTheme {
-  color: #EBEBF5;
-  background: rgba(58, 58, 60, 0.9); /* Dark mode button */
+  color: #ffffff;
+  background: rgba(44, 44, 46, 0.4);
 }
 
 .actionButton:hover {
